Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18822

Apps using cleanup stack in threads panic with Qt 4.8 on Symbian

XMLWordPrintable

    • 41aa023ef6019ac9745b780c953f48b8bbc42a42

      CTrapCleanup::New() is not called at all in the new native Symbian thread implementation thas was introduced in Qt 4.8.
      This results in E32USER-CBASE 69 panics in any application that tries to use the cleanup stack in a non-gui thread.
      In 4.7 this worked because OpenC creates a cleanup stack automatically.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            agocs Laszlo Agocs (Inactive)
            agocs Laszlo Agocs (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes